# subconversion

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  plan.md  vite.config.js
design/: sub-conversion.sketch  sub.drawio
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/check/: check_file.rs  check_folder.rs  create_folder_or_file.rs  init_app.rs  match.rs  mod.rs
src-tauri/src/database/: create.rs  get_sql_file.rs  mod.rs  sqlite.rs
src-tauri/src/database/sql/: app.sql  history.sql  logs.sql  temp_log.sql
src-tauri/src/enums/: mod.rs  os_arch.rs  path.rs  result.rs
src-tauri/src/init/: check_file.rs  check_folder.rs  create_folder_or_file.rs  init_app.rs  match.rs
src-tauri/src/tool/: mod.rs  open_url.rs  platform.rs
src/css/: button.css  fonts.css  home.css  index.css  input.css  layout.css
src/plugins/: main.js
src/plugins/pinia/: Store.js  StoreFactory.js  usePinia.js
src/views/: BaseView.vue  Home.vue  LinkView.vue  LogView.vue  Top.vue  VisibleFormView.vue
