[package]
name = "sub-conversion"
version = "0.0.1"
description = "Subscription Converter App"
authors = ["JunSilckTar"]
license = "License"
repository = "https://github.com/JunSilckTar/subconversion"
default-run = "sub-conversion"
edition = "2021"
rust-version = " 1.81.0"

[build-dependencies]
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
rusqlite = "0.32"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = ["shell-open-api", "fs-all", "shell-all"] }
lazy_static = "1.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
