[workspace]
members = ["../src-tauri"]

[package]
name = "sub-conversion"
version = "0.0.1"
description = "Subscription Converter App"
authors = ["JunSilckTar"]
license = "License"
repository = "https://github.com/JunSilckTar/subconversion"
default-run = "sub-conversion"
edition = "2021"
rust-version = " 1.81.0"

[build-dependencies]
fs_extra = "1.2"
tauri-build = { version = "1.5.4", features = [] }

[dependencies]
rusqlite = "0.32"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7.2", features = ["shell-open-api", "fs-all", "shell-all", "windows7-compat", "dialog-all"] }
lazy_static = "1.5.0"
env_logger = "0.11.5"
log = "0.4.22"

[features]
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort" # 发生 panic 时直接 abort 程序，而不是执行复杂的 panic 清理逻辑
codegen-units = 1 # 指定将所有的 crate 代码生成单元合并为一个单元进行编译
lto = true # 启用链接时优化
opt-level = "s" # 设置优化级别为“s”
strip = true # 从编译后的二进制文件中移除调试符号

